<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SplashScreenActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/img_view_background_splash_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:scaleX="1.05"
            app:srcCompat="@drawable/background_intro" />


        <RelativeLayout
            android:id="@+id/rl_logo_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/img_view_logo_splash_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_app_name"
                android:layout_centerInParent="true"
                android:layout_marginBottom="80dp"

                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Appname"
                android:textColor="@color/black"

                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_view_background_splash_screen"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/food_delivery_app"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_get_started"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background_btn_orange">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_started"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>